coloquei as perguntas e as respostas

--- a/index.html
+++ b/index.html
@@ -11,61 +11,55 @@
         <section id="container">
 <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Eufemismo</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
+                        <p>O que é eufemismo?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>É quando suavizamos uma frase que tem um tom desagradável sem alterar o sentido original dela.</p>
                     </div>
                 </div>
  </article>
  <main>
-        <section id="container">
+    <section id="container">
 <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
-                    </div>
+            <div class="cartao__conteudo">
+                <h3>Eufemismo</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>Um exemplo de quando usar o eufemismo:</p>
                 </div>
- </article>
- <article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Programação</h3>
-        <div class="cartao__conteudo__pergunta">
-            <p>O que é JavaScript?</p>
-        </div>
-        <div class="cartao__conteudo__resposta">
-            <p>O JavaScript é uma linguagem de programação</p>
-        </div>
-    </div>
+                <div class="cartao__conteudo__resposta">
+                    <p>Podemos usar ele, por exemplo, quando não queremos ofender a pessoa com quem estamos falando.</p>
+                </div>
+            </div>
 </article>
+<main>
+    <section id="container">
 <article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Programação</h3>
-        <div class="cartao__conteudo__pergunta">
-            <p>O que é JavaScript?</p>
-        </div>
-        <div class="cartao__conteudo__resposta">
-            <p>O JavaScript é uma linguagem de programação</p>
-        </div>
-    </div>
+            <div class="cartao__conteudo">
+                <h3>Eufemismo</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>Exemplo de  eufemismo:</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p>Ela faltou com a verdade.</p>
+                </div>
+            </div>
 </article>
+<main>
+    <section id="container">
 <article class="cartao">
-    <div class="cartao__conteudo">
-        <h3>Programação</h3>
-        <div class="cartao__conteudo__pergunta">
-            <p>O que é JavaScript?</p>
-        </div>
-        <div class="cartao__conteudo__resposta">
-            <p>O JavaScript é uma linguagem de programação</p>
-        </div>
-    </div>
+            <div class="cartao__conteudo">
+                <h3>Eufemismo</h3>
+                <div class="cartao__conteudo__pergunta">
+                    <p>Utilize Eufemismo na frase: ele está pobre.</p>
+                </div>
+                <div class="cartao__conteudo__resposta">
+                    <p>Ele está em uma situação financeira delicada.</p>
+                </div>
+            </div>
 </article>
+
  </section>
     </main>
     <footer>
